iml-services/iml-device/src/snapshots/iml_device__virtual_device__tests__full_oss_test_oss1.local_6.snap
---
source: iml-services/iml-device/src/virtual_device.rs
expression: c_serde
---
{
  "ScsiDevice": {
    "children": [
      {
        "Mpath": {
          "children": [],
          "devpath": "/devices/virtual/block/dm-13",
          "dm_name": "mpathr",
          "filesystem_type": "zfs_member",
          "fs_label": "ost17",
          "fs_uuid": "5078902062310758123",
          "major": "253",
          "minor": "13",
          "mount": null,
          "paths": [
            "/dev/mapper/mpathr",
            "/dev/disk/by-id/dm-name-mpathr",
            "/dev/disk/by-id/dm-uuid-mpath-360014050d3ab40ec14447f1981b3166f",
            "/dev/disk/by-label/ost17",
            "/dev/disk/by-uuid/5078902062310758123",
            "/dev/dm-13"
          ],
          "scsi80": "SLIO-ORG ost8            0d3ab40e-c144-47f1-981b-3166f3800a27",
          "serial": "360014050d3ab40ec14447f1981b3166f",
          "size": 5368709120
        }
      }
    ],
    "devpath": "/devices/platform/host4/session3/target4:0:0/4:0:0:7/block/sdac",
    "filesystem_type": "mpath_member",
    "fs_label": "ost17",
    "fs_uuid": "5078902062310758123",
    "major": "65",
    "minor": "192",
    "mount": null,
    "paths": [
      "/dev/disk/by-id/scsi-360014050d3ab40ec14447f1981b3166f",
      "/dev/disk/by-id/wwn-0x60014050d3ab40ec14447f1981b3166f",
      "/dev/disk/by-path/fc---lun-7",
      "/dev/disk/by-path/ip-10.73.40.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:oss-lun-7",
      "/dev/disk/by-label/ost17",
      "/dev/disk/by-uuid/5078902062310758123",
      "/dev/sdac"
    ],
    "scsi80": "SLIO-ORG ost8            0d3ab40e-c144-47f1-981b-3166f3800a27",
    "serial": "360014050d3ab40ec14447f1981b3166f",
    "size": 5368709120
  }
}
